--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,14 @@
 .profile__avatar {
   border-radius: 50%;
   height: 120px;
+  width: 120px;
   margin-right: 30px;
+}
+
+@media (max-width: 1023px) {
+  .profile__avatar {
+    height: 120px;
+    width: 120px;
+    margin: 0;
+  } 
 }
