--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -11,3 +11,12 @@
   display: flex;
   margin-bottom: 50px;
 }
+
+@media (max-width: 1023px) {
+  .profile {
+    width: 710px;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 0 50px;
+  }
+}
