feat adapt 320px

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -17,3 +17,10 @@
    grid-template-columns: repeat(2, 1fr);
  } 
 }
+
+@media (max-width: 649px) {
+  .elements {
+    width: 282px;
+    grid-template-columns: 1fr;
+  }
+}
