--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,10 +7,17 @@
   height: 50px;
   margin-left: auto;
   align-self: center;
+  padding: 0;
+  transition: all .3s ease;
+}
+
+.profile__add-button:hover {
+  opacity: .8;
 }
 
 @media (max-width: 1023px) {
   .profile__add-button{
     margin: 0;
+    width: 282px;
   }
 }
