--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,4 +4,19 @@
   background-color: black;
   border: 1px solid #FFFFFF;
   margin: 35px 0 0 17px;
+  transition: all .3s ease;
+}
+
+.profile__edit-button:hover {
+  opacity: .8;
+} 
+
+@media (max-width: 649px) {
+  .profile__edit-button {
+    margin: 0;
+    width: 18px;
+    height: 18px;
+    margin: 18px 0 0 10px;
+    padding: 0;
+  }
 }
