--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,3 +6,11 @@
   color: #FFFFFF;
   margin: 18px 0 16px;
 }
+
+@media (max-width: 649px) {
+  .profile__title {
+    font-size: 27px;
+    margin: 10px 0 14px;
+    height: 25px;
+  }
+}
