feat popup adapt

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -10,3 +10,10 @@
   align-items: center;
   position: relative;
 }
+
+@media (max-width: 499px) {
+  .popup__container {
+    width: 260px;
+    height: 270px;
+  }
+}
