--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -15,3 +15,10 @@
 .popup__close-button:hover {
   opacity: .8;
 }
+
+@media (max-width: 499px) {
+  .popup__close-button {
+    left: 250px;
+    bottom: 260px;
+  }
+}
