--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,5 +2,13 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin: 34px 36px 54px;
+  margin: 34px 0 54px;
+}
+
+@media (max-width: 499px) {
+  .popup__title {
+    font-weight: 500;
+    font-size: 18px;
+    margin: 20px 0 34px;
+  }
 }
