--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -13,7 +13,7 @@
 
 @media (max-width: 499px) {
   .popup__container {
-    width: 260px;
+    width: calc(100% - 40px);
     height: 270px;
   }
 }
