--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -11,6 +11,10 @@
   opacity: .8;
 } 
 
+.profile__edit-button:focus {
+  outline: none;
+}
+
 @media (max-width: 649px) {
   .profile__edit-button {
     margin: 0;
