--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -16,6 +16,10 @@
   opacity: .8;
 }
 
+.popup__close-button {
+  outline: none;
+}
+
 @media (max-width: 499px) {
   .popup__close-button {
     left: calc(100% - 40px);
