--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -15,6 +15,10 @@
   opacity: .8;
 }
 
+.profile__add-button:focus {
+  outline: none;
+}
+
 @media (max-width: 1023px) {
   .profile__add-button{
     margin: 0;
