--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -10,6 +10,10 @@
   margin-bottom: 48px;
 }
 
+.popup__field:focus {
+  outline: none;
+}
+
 @media (max-width: 499px) {
   .popup__field {
     width: 80%;
