--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -4,7 +4,11 @@
   font-size: 18px;
   line-height: 22px;
   color: #FFFFFF;
-  margin: 0 0 25px
+  margin: 0 0 25px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 318px;
 }
 
 @media (max-width: 1023px) {
