--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -5,12 +5,19 @@
   height: 43px;
   color: #FFFFFF;
   margin: 18px 0 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 295px;
 }
 
 @media (max-width: 649px) {
   .profile__title {
     font-size: 27px;
     margin: 10px 0 14px;
-    height: 25px;
+    height: 35px;
+    text-align: center;
+    width: auto;
+    max-width: 254px;
   }
 }
