--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,6 +2,7 @@
 @import url(./__image/elements__image.css);
 @import url(./__title/elements__title.css);
 @import url(./__group/elements__group.css);
+@import url(./__like/elements__like.css);
 .elements {
   display: grid;
   column-gap: 18px;
