--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,4 @@
 @import url(./__image/header__image.css);
-@import url(./__line/header__line.css);
 
 .header {
   width: 882px;
@@ -8,6 +7,7 @@
   align-items: flex-start;
   margin-top: 45px;
   margin-bottom: 40px;
+  border-bottom: 2px solid rgba(84, 84, 84, .7);;
 }
 
 @media (max-width: 1023px) {
