--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 @import url(./__image/header__image.css);
 
 .header {
-  width: 882px;
+  min-width: 882px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -12,13 +12,13 @@
 
 @media (max-width: 1023px) {
   .header {
-    width: 582px;
+    min-width: 582px;
   }
 }
 
 @media (max-width: 649px) {
   .header {
-    width: 100%;
+    min-width: 100%;
     margin: 28px 0 38px;
   }
 }
