--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -5,15 +5,14 @@
   border: none;
   align-self: flex-end;
   padding: 0;
-  height: 40px;
-  width: 40px;
-  left: 420px;
-  bottom: 320px;
+  left: 425px;
+  bottom: 325px;
   transition: all .3s ease;
+  cursor: pointer;
 }
 
 .popup__close-button:hover {
-  opacity: .8;
+  opacity: .6;
 }
 
 .popup__close-button {
