--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,6 +1,6 @@
 .popup__field {
   width: 358px;
-  height: 27px;
+  height: 9%;
   margin: 0 0 30px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
