--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -9,10 +9,11 @@
   align-self: center;
   padding: 0;
   transition: all .3s ease;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
-  opacity: .8;
+  opacity: .6;
 }
 
 .profile__add-button:focus {
