--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
-  height: 48px;
+  line-height: 48px;
   color: #FFFFFF;
   margin: 18px 0 16px;
   text-overflow: ellipsis;
@@ -15,7 +15,7 @@
   .profile__title {
     font-size: 27px;
     margin: 10px 0 14px;
-    height: 35px;
+    line-height: 35px;
     text-align: center;
     width: auto;
     max-width: 254px;
