--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -9,8 +9,9 @@
 
 .profile {
   width: 882px;
+  /* если использовать минимальную ширину появляется горизонтальный скролл*/
   display: flex;
-  margin-bottom: 50px;
+  margin: 0 0 50px;
 }
 
 @media (max-width: 1023px) {
@@ -18,7 +19,6 @@
     width: 582px;
     flex-direction: column;
     align-items: center;
-    margin: 0 0 50px;
   }
 }
 
