--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,6 +8,9 @@
   margin-top: 45px;
   margin-bottom: 40px;
   border-bottom: 2px solid rgba(84, 84, 84, .7);;
+  /* в макете пустой элемент с границей в 1 пиксель, 
+  как я понимаю верхняя и нижняя граница там складываются и получается 2 пикселя
+  у меня же только нижняя граница */
 }
 
 @media (max-width: 1023px) {
