--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__field/_type/_description/popup__field_type_description.css);
