--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -2,4 +2,10 @@
   border: none;
   background: none;
   padding: 0;
+  transition: all .3s ease;
+  cursor: pointer;
+}
+
+.elements__like:hover {
+  opacity: .6;
 }
