--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -4,8 +4,12 @@
   padding: 0;
   transition: all .3s ease;
   cursor: pointer;
+  width: 22px;
+  height: 22px;
+  background: url(../../../images/Vector\(2\).svg) center no-repeat;
 }
 
 .elements__like:hover {
   opacity: .6;
 }
+
