--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,4 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__field/_type/_description/popup__field_type_description.css);
+@import url(../blocks/elements/__like/_active/elements__like_active.css);
