--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,6 +4,9 @@
 @import url(./__submit-button/popup__submit-button.css);
 @import url(./__close-image/popup__close-image.css);
 @import url(./__close-button/popup__close-button.css);
+@import url(./__image/popup__image.css);
+@import url(./__case/popup__case.css);
+@import url(./__image-title/popup__image-title.css);
 
 .popup {
   display: none;
