--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,6 +7,8 @@
 @import url(./__image/popup__image.css);
 @import url(./__case/popup__case.css);
 @import url(./__image-title/popup__image-title.css);
+@import url(./__field-error/popup__field-error.css);
+@import url(./__input-wrapper/popup__input-wrapper.css);
 
 .popup {
   position: fixed;
