--- a/pages/index.css
+++ b/pages/index.css
@@ -11,3 +11,4 @@
 @import url(../blocks/popup/__field/_type/_description/popup__field_type_description.css);
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/popup/__submit-button_inactive/popup__submit-button_inactive.css);
+@import url(../blocks/popup/__field_type_error/popup__field_type_error.css);
