--- a/src/blocks/elements/__like/elements__like.css
+++ b/src/blocks/elements/__like/elements__like.css
@@ -6,7 +6,7 @@
   cursor: pointer;
   width: 22px;
   height: 22px;
-  background: url(../../../images/Vector\(2\).svg) center no-repeat;
+  background: url(../../../images/Vector2.svg) center no-repeat;
 }
 
 .elements__like:hover {
