--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -4,6 +4,7 @@
 @import url(./__group/elements__group.css);
 @import url(./__like/elements__like.css);
 @import url(./__delete/elements__delete.css);
+@import url(./__like-counter/elements__like-counter.css);
 .elements {
   display: grid;
   column-gap: 18px;
