--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -9,6 +9,8 @@
 @import url(./__image-title/popup__image-title.css);
 @import url(./__field-error/popup__field-error.css);
 @import url(./__input-wrapper/popup__input-wrapper.css);
+@import url(./__title/__title_popup-close/popup__title_popup-close.css);
+@import url(./__container/__container_small/popup__container_small.css);
 
 .popup {
   position: fixed;
