--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -3,6 +3,11 @@
   height: 120px;
   width: 120px;
   margin-right: 30px;
+  position: absolute;
+}
+
+.profile__avatar:hover {
+  opacity: .2;
 }
 
 @media (max-width: 1023px) {
