--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -6,7 +6,7 @@
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__add-button/profile__add-button.css);
 @import url(./__edit-image/profile__edit-image.css);
-
+@import url(./__avatar-edit/profile__avatar-edit.css);
 .profile {
   width:100%;
   max-width:882px;
